{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 735,
  "lineage": "f7d2f79a-2eac-13ff-c130-0f526bf99be8",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120211568300:network-acl/acl-00341d4c09a4d999a",
            "default_network_acl_id": "acl-00341d4c09a4d999a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-00341d4c09a4d999a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "120211568300",
            "subnet_ids": [
              "subnet-0095d5a370b4f938d",
              "subnet-00f3ae4174db7de0f",
              "subnet-035bab115604cf799",
              "subnet-046b86aab8c67668c",
              "subnet-068ef42d789b6d52f",
              "subnet-0f34e1da576c92c3c"
            ],
            "tags": {
              "Name": "HR-stag-eksdemo1-default",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-eksdemo1-default",
              "environment": "stag",
              "owners": "HR"
            },
            "vpc_id": "vpc-0fe6ffc8ed0dc2c95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120211568300:route-table/rtb-0908a2f8a01c67140",
            "default_route_table_id": "rtb-0908a2f8a01c67140",
            "id": "rtb-0908a2f8a01c67140",
            "owner_id": "120211568300",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "HR-stag-eksdemo1-default",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-eksdemo1-default",
              "environment": "stag",
              "owners": "HR"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0fe6ffc8ed0dc2c95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120211568300:security-group/sg-0e34783a5a76a0b3b",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0e34783a5a76a0b3b",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "120211568300",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "HR-stag-eksdemo1-default",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-eksdemo1-default",
              "environment": "stag",
              "owners": "HR"
            },
            "vpc_id": "vpc-0fe6ffc8ed0dc2c95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0323536f7c7a00c5c",
            "association_id": "eipassoc-0be6b245bdf084456",
            "domain": "vpc",
            "id": "eipalloc-0323536f7c7a00c5c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01b1d335ae159a217",
            "private_dns": "ip-10-0-101-38.ec2.internal",
            "private_ip": "10.0.101.38",
            "public_dns": "ec2-52-23-8-215.compute-1.amazonaws.com",
            "public_ip": "52.23.8.215",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "HR-stag-eksdemo1-us-east-1a",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-eksdemo1-us-east-1a",
              "environment": "stag",
              "owners": "HR"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120211568300:internet-gateway/igw-09bcd9b86496b1775",
            "id": "igw-09bcd9b86496b1775",
            "owner_id": "120211568300",
            "tags": {
              "Name": "HR-stag-eksdemo1",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-eksdemo1",
              "environment": "stag",
              "owners": "HR"
            },
            "vpc_id": "vpc-0fe6ffc8ed0dc2c95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0323536f7c7a00c5c",
            "association_id": "eipassoc-0be6b245bdf084456",
            "connectivity_type": "public",
            "id": "nat-095860823c52f4e80",
            "network_interface_id": "eni-01b1d335ae159a217",
            "private_ip": "10.0.101.38",
            "public_ip": "52.23.8.215",
            "subnet_id": "subnet-035bab115604cf799",
            "tags": {
              "Name": "HR-stag-eksdemo1-us-east-1a",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-eksdemo1-us-east-1a",
              "environment": "stag",
              "owners": "HR"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f7253781932faa7d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-095860823c52f4e80",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f7253781932faa7d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09bcd9b86496b1775",
            "id": "r-rtb-0da26301950b8b7731080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0da26301950b8b773",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120211568300:route-table/rtb-051386f7f35464d15",
            "id": "rtb-051386f7f35464d15",
            "owner_id": "120211568300",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "HR-stag-eksdemo1-db",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-eksdemo1-db",
              "environment": "stag",
              "owners": "HR"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe6ffc8ed0dc2c95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120211568300:route-table/rtb-0f7253781932faa7d",
            "id": "rtb-0f7253781932faa7d",
            "owner_id": "120211568300",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-095860823c52f4e80",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "HR-stag-eksdemo1-private",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-eksdemo1-private",
              "environment": "stag",
              "owners": "HR"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe6ffc8ed0dc2c95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120211568300:route-table/rtb-0da26301950b8b773",
            "id": "rtb-0da26301950b8b773",
            "owner_id": "120211568300",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09bcd9b86496b1775",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "HR-stag-eksdemo1-public",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-eksdemo1-public",
              "environment": "stag",
              "owners": "HR"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe6ffc8ed0dc2c95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0514e00d9f27506f3",
            "route_table_id": "rtb-051386f7f35464d15",
            "subnet_id": "subnet-0f34e1da576c92c3c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8a1a11102cb7fb2",
            "route_table_id": "rtb-051386f7f35464d15",
            "subnet_id": "subnet-00f3ae4174db7de0f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0221cbce850e17151",
            "route_table_id": "rtb-0f7253781932faa7d",
            "subnet_id": "subnet-046b86aab8c67668c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d10a087f07c0d08",
            "route_table_id": "rtb-0f7253781932faa7d",
            "subnet_id": "subnet-068ef42d789b6d52f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03bf8a0a03f0d213a",
            "route_table_id": "rtb-0da26301950b8b773",
            "subnet_id": "subnet-035bab115604cf799"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084425707e0e1f07b",
            "route_table_id": "rtb-0da26301950b8b773",
            "subnet_id": "subnet-0095d5a370b4f938d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120211568300:subnet/subnet-0f34e1da576c92c3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f34e1da576c92c3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "120211568300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-stag-eksdemo1-db-us-east-1a",
              "Type": "database-subnets",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-eksdemo1-db-us-east-1a",
              "Type": "database-subnets",
              "environment": "stag",
              "owners": "HR"
            },
            "vpc_id": "vpc-0fe6ffc8ed0dc2c95"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120211568300:subnet/subnet-00f3ae4174db7de0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f3ae4174db7de0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "120211568300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-stag-eksdemo1-db-us-east-1b",
              "Type": "database-subnets",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-eksdemo1-db-us-east-1b",
              "Type": "database-subnets",
              "environment": "stag",
              "owners": "HR"
            },
            "vpc_id": "vpc-0fe6ffc8ed0dc2c95"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120211568300:subnet/subnet-046b86aab8c67668c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046b86aab8c67668c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "120211568300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-stag-eksdemo1-private-us-east-1a",
              "Type": "private-subnets",
              "environment": "stag",
              "kubernetes.io/cluster/HR-stag-eksdemo1": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-eksdemo1-private-us-east-1a",
              "Type": "private-subnets",
              "environment": "stag",
              "kubernetes.io/cluster/HR-stag-eksdemo1": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "HR"
            },
            "vpc_id": "vpc-0fe6ffc8ed0dc2c95"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120211568300:subnet/subnet-068ef42d789b6d52f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068ef42d789b6d52f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "120211568300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-stag-eksdemo1-private-us-east-1b",
              "Type": "private-subnets",
              "environment": "stag",
              "kubernetes.io/cluster/HR-stag-eksdemo1": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-eksdemo1-private-us-east-1b",
              "Type": "private-subnets",
              "environment": "stag",
              "kubernetes.io/cluster/HR-stag-eksdemo1": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "HR"
            },
            "vpc_id": "vpc-0fe6ffc8ed0dc2c95"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120211568300:subnet/subnet-035bab115604cf799",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035bab115604cf799",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "120211568300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-stag-eksdemo1-public-us-east-1a",
              "Type": "public-subnets",
              "environment": "stag",
              "kubernetes.io/cluster/HR-stag-eksdemo1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-eksdemo1-public-us-east-1a",
              "Type": "public-subnets",
              "environment": "stag",
              "kubernetes.io/cluster/HR-stag-eksdemo1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "HR"
            },
            "vpc_id": "vpc-0fe6ffc8ed0dc2c95"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120211568300:subnet/subnet-0095d5a370b4f938d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0095d5a370b4f938d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "120211568300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-stag-eksdemo1-public-us-east-1b",
              "Type": "public-subnets",
              "environment": "stag",
              "kubernetes.io/cluster/HR-stag-eksdemo1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-eksdemo1-public-us-east-1b",
              "Type": "public-subnets",
              "environment": "stag",
              "kubernetes.io/cluster/HR-stag-eksdemo1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "HR"
            },
            "vpc_id": "vpc-0fe6ffc8ed0dc2c95"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120211568300:vpc/vpc-0fe6ffc8ed0dc2c95",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00341d4c09a4d999a",
            "default_route_table_id": "rtb-0908a2f8a01c67140",
            "default_security_group_id": "sg-0e34783a5a76a0b3b",
            "dhcp_options_id": "dopt-0f34da52b3634948c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fe6ffc8ed0dc2c95",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0908a2f8a01c67140",
            "owner_id": "120211568300",
            "tags": {
              "Name": "HR-stag-eksdemo1",
              "environment": "stag",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-stag-eksdemo1",
              "environment": "stag",
              "owners": "HR"
            }
          }
        }
      ]
    }
  ]
}